[package]
name = "luminance-glyph"
description = "A fast text renderer for luminance, powered by glyph_brush."
version = "0.1.0"
authors = ["John Doneth <doneth7@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["font", "ttf", "truetype", "luminance", "text"]
readme = "README.md"
repository = "https://github.com/JohnDoneth/luminance-glyph"

[dependencies]
luminance = "0.42"
luminance-derive = "0.6"
glyph_brush = "0.7"
log = "0.4.8"
luminance-front = "0.3.0"

[dev-dependencies]
luminance-glfw = "0.14.1"
luminance-glutin = "0.10"
luminance-windowing = "0.9"
glfw = "0.40"